# MalachiteIDE

./: .gitignor  CMakeLists.txt  README.md  main.cpp
scr/app/: app.cpp  app.h
scr/app/engine_search/: engine.h
scr/app/execute/: executer.cpp  executer.h
scr/app/tab/: tab.cpp  tab.h
scr/parser/: parser.cpp  parser.h
scr/text/: CustomTextEdit.h
